[project]
name = "nexttoken"
version = "0.2.0"
description = "Interactive next-token visualization demo using HuggingFace Transformers"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "Pillow>=10.0",
    "python-dotenv>=1.2.1",
    "torch>=2.1",
    "torchvision>=0.16",
    "transformers>=4.36",
    "gunicorn>=22.0",
]

[project.scripts]
demo = "demo:main"
